Closed Bug 230965 Opened 21 years ago Closed 21 years ago

Error: uncaught exception: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIDOMWindowInternal.scrollMaxY]" location: "JS frame :: chrome://messenger/content/mailWindowOverlay.js :: SpaceHit :: line 1757" data: no]

Categories

(SeaMonkey :: MailNews: Message Display, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: neil)

Details

(Keywords: fixed1.7)

Attachments

(2 files)

Error: uncaught exception: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIDOMWindowInternal.scrollMaxY]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://messenger/content/mailWindowOverlay.js :: SpaceHit :: line 1757" data: no] This can happen when there's no view. the call should be wrapped in a try{}. if it throws, then imo we should advance to the next message.
This adds a try {} catch {} around the unsafe call, and if anything does go wrong, it should try to move onto the next message.
Comment on attachment 139107 [details] [diff] [review] Wrap call in try block I guess that a 'r=?' is wanted !?
Attachment #139107 - Flags: review?(neil.parkwaycc.co.uk)
Comment on attachment 139107 [details] [diff] [review] Wrap call in try block James, you seem to have forgotten the scroll up case. Also, I think an early return on a successful scroll would result in neater code.
Attachment #139107 - Flags: review?(neil.parkwaycc.co.uk) → review-
(In reply to comment #3) > (From update of attachment 139107 [details] [diff] [review]) > James, you seem to have forgotten the scroll up case. Also, I think an early neil: |contentWindow.scrollY > 0| should not throw exception, should it ? Or is there something else to fix ? > return on a successful scroll would result in neater code. james: |return| instead of |gotoNext = false|...
(In reply to comment #4) >|contentWindow.scrollY > 0| should not throw exception, should it ? Ah, interesting that you should say that... I double checked, and it did use to throw an exception, but because that caused bug 202206 a patch attached to bug 198987 was checked in to change the behaviour... roc, would a similar patch for the Max versions be a suitable way to resolve this bug?
(In reply to comment #3) > (From update of attachment 139107 [details] [diff] [review]) > James, you seem to have forgotten the scroll up case. Also, I think an early > return on a successful scroll would result in neater code. I was just dealing with the stated error, though I should have spotted that code and wrapped it too, sorry. Though from comment 5 patching this code may not be needed/desirable. (In reply to comment #4) > james: > |return| instead of |gotoNext = false|... I know what an early return is...
Attached patch roc's patchSplinter Review
I'm calling this roc's patch, not only because of comment 7, but because I got the idea of it from roc's bug 198987 comment 19. Which means that it ought to get someone else's r/sr...
Attachment #147017 - Flags: superreview?(jst)
Attachment #147017 - Flags: review?(jst)
Assignee: timeless → neil.parkwaycc.co.uk
Comment on attachment 147017 [details] [diff] [review] roc's patch Yeah, of course. r+sr=jst
Attachment #147017 - Flags: superreview?(jst)
Attachment #147017 - Flags: superreview+
Attachment #147017 - Flags: review?(jst)
Attachment #147017 - Flags: review+
Comment on attachment 147017 [details] [diff] [review] roc's patch Trivial patch to stop throwing an unexpected exception.
Attachment #147017 - Flags: approval1.7?
Comment on attachment 147017 [details] [diff] [review] roc's patch a=asa (on behalf of drivers) for checkin to 1.7
Attachment #147017 - Flags: approval1.7? → approval1.7+
Fix checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Keywords: fixed1.7
Resolution: --- → FIXED
Product: Browser → Seamonkey
Summary: :: SpaceHit :: line 1757" data: no] Error: uncaught exception: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIDOMWindowInternal.scrollMaxY]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://me… → Error: uncaught exception: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIDOMWindowInternal.scrollMaxY]" location: "JS frame :: chrome://messenger/content/mailWindowOverlay.js :: SpaceHit :: line 1757" data: no]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: