Bug 230965 scrollMax[XY] should not throw exceptions patch based on roc's patch for scroll[XY] that was used to fix bug 202206 r/sr=jst