dom/src/base/nsGlobalWindow.cpp
@@ -1962,7 +1962,7 @@ GlobalWindowImpl::GetScrollMaxXY(PRInt32* aScrollMaxX, PRInt32* aScrollMaxY)
 
   GetScrollInfo(&view, &p2t, &t2p);
   if (!view)
-    return NS_ERROR_FAILURE;
+    return NS_OK;      // bug 230965 changed from NS_ERROR_FAILURE
 
   nsSize scrolledSize;
   rv = view->GetContainerSize(&scrolledSize.width, &scrolledSize.height);
